# suntime-ics-generator

./: .gitignore  README.md  generate-calendar.py  nagoya.ics  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
