[tool.poetry]
name = "sunrise-sunset-ics-generator"
version = "0.1.0"
description = ""
authors = ["Kotet <kotet0418@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
ics = "^0.7"
suntime = "^1.2.5"

[tool.poetry.dev-dependencies]
autopep8 = "^1.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
